infra/istio/virtualservice-ingestion.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ingestion-service
  namespace: bulkhead
spec:
  hosts:
    - bulkhead.local
    - bulkhead.localhost
  gateways:
    - bulkhead-gateway
  http:
    - match:
        - uri:
            prefix: /ingest
      route:
        - destination:
            host: ingestion-service
            port:
              number: 8001
      timeout: 300s
